--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"axios": "^1.7.7"
+		"@types/jwt-decode": "^3.1.0",
+		"axios": "^1.7.7",
+		"jwt-decode": "^4.0.0"
 	}
 }
