--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"axios": "^1.7.7",
 		"jwt-decode": "^4.0.0",
 		"svelte-cubed": "^0.2.1",
+		"svelte-motion": "^0.12.2",
+		"svelte-transition": "^0.0.17",
 		"three": "^0.168.0"
 	}
 }
